Set bigger default heap for it tests